[package]
name = "blaise"
version = "0.1.4"
authors = [
    "Carlos A. Rueda <carueda@mbari.org>",
]
description = "Creates crops from PASCAL files annotated data"

edition = "2021"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.3"
image = { version = "0.23", features = ["png", "jpeg"] }
indicatif = "0.17.0"
log = { version = "0.4.14" }
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_with = "2.1.0"
walkdir = "2.3.2"

[dev-dependencies]
pretty_assertions = "1"
